--- a/lab1/1/1/1.csproj
+++ b/lab1/1/1/1.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CodeChecker.cs" />
+    <Compile Include="FinalChecker.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
